fixed border on IE

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -39,18 +39,23 @@
   font-weight: 500;
   font-size: 14px;
   line-height: 18px;
-
   letter-spacing: -0.2px;
   color: $black;
   text-decoration: none;
   text-transform: uppercase;
-  border-bottom: 1px dashed $black;
-  transition: color ease 0.3s,
-    border-bottom ease 0.3s;
+  transition: color ease 0.3s;
 
   &:hover,
   &:focus {
     color: $yellow;
+  }
+}
+
+.header__callback-label {
+  border-bottom: 1px dashed $black;
+
+  &:hover,
+  &:focus {
     border-bottom: 1px dashed $yellow;
   }
 }
